--- a/ProjetCarsat/.classpath
+++ b/ProjetCarsat/.classpath
@@ -17,5 +17,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Program Files/Java/pdfbox-2.0.17.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
