--- a/ProjetCarsat/pom.xml
+++ b/ProjetCarsat/pom.xml
@@ -83,5 +83,15 @@
 		    <artifactId>javax.json</artifactId>
 		    <version>1.1.4</version>
 		</dependency>	
+		<dependency>
+    		<groupId>javax.mail</groupId>
+    		<artifactId>javax.mail-api</artifactId>
+    		<version>1.6.2</version>
+		</dependency>
+		<dependency>
+    		<groupId>jaf</groupId>
+    		<artifactId>activation</artifactId>
+    		<version>1.0.2</version>
+		</dependency>
 	</dependencies>
 </project>
