--- a/ProjetCarsat/.classpath
+++ b/ProjetCarsat/.classpath
@@ -17,5 +17,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mareges/Downloads/jaf-1.1.1/activation.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
