--- a/ProjetCarsat/pom.xml
+++ b/ProjetCarsat/pom.xml
@@ -107,5 +107,10 @@
 			<artifactId>javax.mail</artifactId>
 			<version>1.6.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.controlsfx</groupId>
+			<artifactId>controlsfx</artifactId>
+			<version>8.40.16</version>
+		</dependency>
 	</dependencies>
 </project>
